# casper_staking_

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain
.github/workflow/: build.yml
.github/workflows/: build.yml
cep47/: Cargo.toml
cep47/src/: cep47.rs  data.rs  lib.rs
erc20/: .gitignore  Cargo.toml  README.md
erc20/.cargo/: config
erc20/UI/: erc20.js
erc20/erc20/: Cargo.toml
erc20/erc20-token/: Cargo.toml
erc20/erc20-token/src/: main.rs  main1.rs
erc20/erc20/src/: allowances.rs  entry_points.rs  error.rs  lib.rs
erc20/keys/: secret_key.pem
keys/: public_key.pem  rust_sol.wasm
staking_contract/: .gitignore  Makefile  README.md  rust-toolchain
staking_contract/staking_contract/: Cargo.toml
staking_contract/staking_contract/keys/: cep47-token.wasm  public_key_hex.txt
staking_contract/staking_contract/keys/ACCOUNT2/: public_key (1).pem  public_key_hex (1).txt  secret_key (1).pem
staking_contract/staking_contract/src/: address.rs  data.rs  detail.rs  error.rs  event.rs  lib.rs  main.rs  modifiers.rs  staking_contract.rs
staking_contract/staking_contract_tests/: Cargo.toml
staking_contract/staking_contract_tests/src/: lib.rs  staking_contract_tests.rs
staking_contract/staking_contract_tests/wasm/: erc20.wasm
staking_contract/utils/contract-utils/: Cargo.toml
staking_contract/utils/contract-utils/src/: contract_storage.rs
