[package]
name = "cep47"
version = "0.2.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = "1.4.4"
casper-types = "1.4.4"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "cep47-token"
path = "bin/cep47_token.rs"
bench = false
doctest = false
test = false
