[package]
name = "staking_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "staking_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
